--- a/index.html
+++ b/index.html
@@ -3,11 +3,146 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <header class="header">
+      <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Яндекс Практикум">
+      <h1 class="header__title">Научиться учиться</h1>
+      <div class="header__subtitle">
+          <p> Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href=""> Узнать &rarr;</a> </div></p>
 
+      <div class="header__link"></div>
+      <div>
+          <img class="header__main-illustration" src="images/two_again.png" alt="Грустный мальчик">
+      </div>
+      <div class="header__square-pic"></div>
+    </header>
+    <main class="content">
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-cilumns__main-text">
+          <p class="two-columns__paragraph">Ни в школе,ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные
+         задачи, чтобы лучше сдать тест, но часто в итоге это не даетт нам реального знания. Зубрежка быстро выветривется и не приносит пользы.</p>
+          <p class="two-columns__paragraph"> <span class="two-columns__span-accent"> Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим деелать?</p>
+          <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      </div>
+      </section>
+
+      <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+            <h3 class="section-subtitle">Про учёбу и мозг</h3>
+            <ul class="table">
+                <li class="table__cell">
+                    <h4 class="table__heading">86 миллиардов</h4>
+                    <p class="table__text">Число нейронов в мозге человека</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">2,1 миллиарда</h4>
+                    <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                    <p class="table__text">Всемирный Банк,2017</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">1000 терабайт</h4>
+                    <p class="table__text">Объём памяти человека</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">500 триллионов</h4>
+                    <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">420 миллионов</h4>
+                    <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                    <p class="table__text">Всемирный Банк,2017</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">17-20 лет</h4>
+                    <p class="table__text">Пик обучаемости</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">1885 год</h4>
+                    <p class="table__text">Открытие кривой забывания</p>
+                </li>
+                <li class="table__cell">
+                    <h4 class="table__heading">1889 год</h4>
+                    <p class="table__text">Открытие условного рефлекса</p>
+                </li>
+            </ul>
+      </section>
+
+      <section class="feynman">
+        <h1 class="feynman__title">Метод Феймана</h1>
+            <h2 class="feynman__subtitle">Выучить и не забыть</h2>
+            <a class="feynman__link" href="#">Подробнее</a>
+            <img src="feynman.jpeg.png" alt="Фейнман">
+      </section>
+
+      <section class="kaufman">
+        <h1 class="section-title_them_dark">Принципы обучения</h1>
+        <h2 class="section-subtitle_them_dark">от Джоша Кауфмана</h2>
+        <ul class="table_them_dark">
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">1</h3>
+            <p class="table__text_them_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">2</h3>
+            <p class="table__text_them_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">3</h3>
+            <p class="table__text_them_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">4</h3>
+            <p class="table__text_them_dark">Разбейте навыки на элементы.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">5</h3>
+            <p class="table__text_them_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">6</h3>
+            <p class="table__text_them_dark">Устраните препядствие для занятий.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">7</h3>
+            <p class="table__text_them_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">8</h3>
+            <p class="table__text_them_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">9</h3>
+            <p class="table__text_them_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell_them_dark">
+            <h3 class="table__heading_them_dark">10</h3>
+            <p class="table__text_them_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
+        <div class="kaufman__triangle"></div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright"></div>
+        <div class="footer__column_content_info"></div>
+        <div class="footer__column_content_social"></div>
+        <div class=" logo logo_place_footer"></div>
+        <div class="footer__author"></div>
+        <div class="footer__column-heading"></div>
+        <div class="footer__column-links"></div>
+        <div class="footer__social-icon"></div>
+        <div class="footer__column-link"></div>
+    </div>
+
+    </footer>
   </div>
 </body>
 </html>
