--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" >
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,11 +13,10 @@
       <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <div class="header__subtitle">
-          <p> Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href=""> Узнать &rarr;</a> </div></p>
-
+          <p> Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href=""> Узнать &rarr;</a></p></div>
       <div class="header__link"></div>
       <div>
-          <img class="header__main-illustration" src="images/two_again.png" alt="Грустный мальчик">
+          <img class="header__main-illustration" src="images/header-image.png" alt="Грустный мальчик">
       </div>
       <div class="header__square-pic"></div>
     </header>
@@ -26,64 +25,64 @@
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-cilumns__main-text">
-          <p class="two-columns__paragraph">Ни в школе,ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные
+          <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные
          задачи, чтобы лучше сдать тест, но часто в итоге это не даетт нам реального знания. Зубрежка быстро выветривется и не приносит пользы.</p>
           <p class="two-columns__paragraph"> <span class="two-columns__span-accent"> Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим деелать?</p>
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
       </div>
       </section>
-
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-            <h3 class="section-subtitle">Про учёбу и мозг</h3>
+            <p class="section-subtitle">Про учёбу и мозг</p>
             <ul class="table">
                 <li class="table__cell">
-                    <h4 class="table__heading">86 миллиардов</h4>
+                    <h3 class="table__heading">86 миллиардов</h3>
                     <p class="table__text">Число нейронов в мозге человека</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">2,1 миллиарда</h4>
+                    <h3 class="table__heading">2,1 миллиарда</h3>
                     <p class="table__text">Число нуждающихся в повышении квалификации</p>
-                    <p class="table__text">Всемирный Банк,2017</p>
+                    <p class="table__text">Всемирный Банк, 2017</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">1000 терабайт</h4>
+                    <h3 class="table__heading">1000 терабайт</h3>
                     <p class="table__text">Объём памяти человека</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">500 триллионов</h4>
+                    <h3 class="table__heading">500 триллионов</h3>
                     <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">420 миллионов</h4>
+                    <h3 class="table__heading">420 миллионов</h3>
                     <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-                    <p class="table__text">Всемирный Банк,2017</p>
+                    <p class="table__text">Всемирный Банк, 2017</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">17-20 лет</h4>
+                    <h3 class="table__heading">17-20 лет</h3>
                     <p class="table__text">Пик обучаемости</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">1885 год</h4>
+                    <h3 class="table__heading">1885 год</h3>
                     <p class="table__text">Открытие кривой забывания</p>
                 </li>
                 <li class="table__cell">
-                    <h4 class="table__heading">1889 год</h4>
+                    <h3 class="table__heading">1889 год</h3>
                     <p class="table__text">Открытие условного рефлекса</p>
                 </li>
             </ul>
       </section>
 
       <section class="feynman">
-        <h1 class="feynman__title">Метод Феймана</h1>
-            <h2 class="feynman__subtitle">Выучить и не забыть</h2>
-            <a class="feynman__link" href="#">Подробнее</a>
-            <img src="feynman.jpeg.png" alt="Фейнман">
+        <h2 class="feynman__title">Метод Феймана</h2>
+            <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+            <a class="feynman__link" href="#">Подробнее &rarr;</a>
+            <img class="feyman__image" src="images/feynman.png" alt="Фейнман">
       </section>
 
       <section class="kaufman">
-        <h1 class="section-title_them_dark">Принципы обучения</h1>
-        <h2 class="section-subtitle_them_dark">от Джоша Кауфмана</h2>
+        <h3 class="section-title_them_dark">Принципы обучения</h3>
+        <h3 class="section-subtitle_them_dark">от Джоша Кауфмана</h3>
         <ul class="table_them_dark">
           <li class="table__cell_them_dark">
             <h3 class="table__heading_them_dark">1</h3>
@@ -126,22 +125,34 @@
             <p class="table__text_them_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div>
+          <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Треугольник">
+        </div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright"></div>
-        <div class="footer__column_content_info"></div>
-        <div class="footer__column_content_social"></div>
-        <div class=" logo logo_place_footer"></div>
-        <div class="footer__author"></div>
-        <div class="footer__column-heading"></div>
-        <div class="footer__column-links"></div>
-        <div class="footer__social-icon"></div>
-        <div class="footer__column-link"></div>
-    </div>
-
+        <div class="footer__column_content_copyright">
+            <img class=" logo logo_place_footer" src="images/logo_place_footer.svg" alt="Яндекс Практикум">
+            <p class="footer__author">&copy; Арина Приступа</p>
+        </div>
+      <div class="footer__column_content_info">
+       <p class="footer__column-heading">О Практикуме</p>
+        <ul class="footer__column-links">
+         <li><a class="footer__column-link" href="#">Главная</a></li>
+         <li><a class="footer__column-link" href="#">Концепция</a></li>
+         <li><a class="footer__column-link" href="#">Наставники</a></li>
+       </ul>
+      </div>
+      <div class="footer__column_content_social">
+       <p class="footer__column-heading"> Соцсети </p>
+        <ul class="footer__column-links">
+          <li><a class="footer__column-link footer__social-icon" href="#"><img src="images/youtube-icon.svg" alt="Ютуб"> YouTube</a></li>
+          <li><a class="footer__column-link footer__social-icon " href="#"><img src="images/vk_color_white.svg" alt="ВКонтакте"> ВКонтакте</a></li>
+          <li><a class="footer__column-link footer__social-icon" href="#"><img src="images/tiktok-icon.svg" alt="Тикток"> TikTok</a></li>
+        </ul>
+      </div>
+     </div>
     </footer>
   </div>
 </body>
