--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <header class="header">
       <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Яндекс Практикум">
       <h1 class="header__title">Научиться учиться</h1>
-      <div class="header__subtitle">
-          <p> Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href=""> Узнать &rarr;</a></p></div>
-      <div class="header__link"></div>
+      <p class="header__subtitle"> Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href=""> Узнать &rarr;</a></p>
       <div>
           <img class="header__main-illustration" src="images/header-image.png" alt="Грустный мальчик">
       </div>
@@ -22,15 +20,15 @@
     </header>
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <div class="two-cilumns__main-text">
+          <div class="two-columns__main-text">
           <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные
          задачи, чтобы лучше сдать тест, но часто в итоге это не даетт нам реального знания. Зубрежка быстро выветривется и не приносит пользы.</p>
           <p class="two-columns__paragraph"> <span class="two-columns__span-accent"> Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим деелать?</p>
           <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-      </div>
+      </article>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -77,81 +75,79 @@
         <h2 class="feynman__title">Метод Феймана</h2>
             <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
             <a class="feynman__link" href="#">Подробнее &rarr;</a>
-            <img class="feyman__image" src="images/feynman.png" alt="Фейнман">
+            <img class="feynman__image" src="images/feynman.png" alt="Фейнман">
       </section>
 
       <section class="kaufman">
-        <h3 class="section-title_them_dark">Принципы обучения</h3>
-        <h3 class="section-subtitle_them_dark">от Джоша Кауфмана</h3>
-        <ul class="table_them_dark">
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">1</h3>
-            <p class="table__text_them_dark">Выберите привлекательный проект.</p>
+        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class=" table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">2</h3>
-            <p class="table__text_them_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">3</h3>
-            <p class="table__text_them_dark">Определите целевой уровень мастерства.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">4</h3>
-            <p class="table__text_them_dark">Разбейте навыки на элементы.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
+            <p class="table__text table__text_theme_dark">Разбейте навыки на элементы.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">5</h3>
-            <p class="table__text_them_dark">Приготовьте всё необходимое для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">6</h3>
-            <p class="table__text_them_dark">Устраните препядствие для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
+            <p class="table__text table__text_theme_dark">Устраните препядствие для занятий.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">7</h3>
-            <p class="table__text_them_dark">Выделите специальное время для занятий.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">8</h3>
-            <p class="table__text_them_dark">Создайте быстрые петли обратной связи.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">9</h3>
-            <p class="table__text_them_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
-          <li class="table__cell_them_dark">
-            <h3 class="table__heading_them_dark">10</h3>
-            <p class="table__text_them_dark">Уделяйте внимание количеству и скорости.</p>
+          <li class="table__cell table__cell_theme_dark">
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div>
-          <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Треугольник">
-        </div>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
             <img class=" logo logo_place_footer" src="images/logo_place_footer.svg" alt="Яндекс Практикум">
             <p class="footer__author">&copy; Арина Приступа</p>
         </div>
-      <div class="footer__column_content_info">
+      <nav class="footer__column footer__column_content_info">
        <p class="footer__column-heading">О Практикуме</p>
         <ul class="footer__column-links">
-         <li><a class="footer__column-link" href="#">Главная</a></li>
-         <li><a class="footer__column-link" href="#">Концепция</a></li>
-         <li><a class="footer__column-link" href="#">Наставники</a></li>
+          <li><a class="footer__column-link" href="#">Главная</a></li>
+          <li><a class="footer__column-link" href="#">Концепция</a></li>
+          <li><a class="footer__column-link" href="#">Наставники</a></li>
        </ul>
-      </div>
-      <div class="footer__column_content_social">
+      </nav>
+      <nav class="footer__column footer__column_content_social">
        <p class="footer__column-heading"> Соцсети </p>
         <ul class="footer__column-links">
-          <li><a class="footer__column-link footer__social-icon" href="#"><img src="images/youtube-icon.svg" alt="Ютуб"> YouTube</a></li>
-          <li><a class="footer__column-link footer__social-icon " href="#"><img src="images/vk_color_white.svg" alt="ВКонтакте"> ВКонтакте</a></li>
-          <li><a class="footer__column-link footer__social-icon" href="#"><img src="images/tiktok-icon.svg" alt="Тикток"> TikTok</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/youtube-icon.svg" alt="Ютуб">YouTube</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
+          <li><a class="footer__column-link" href="#"><img class="footer__social-icon" src="images/tiktok-icon.svg" alt="Тикток">TikTok</a></li>
         </ul>
-      </div>
+      </nav>
      </div>
     </footer>
   </div>
